fix: add white-space: pre-wrap to wrap long code blocks

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,6 +98,7 @@ ol {
 
 pre {
   margin-bottom: 1em;
+  white-space: pre-wrap;
 }
 
 code {
